--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-draggable-droppable": "^4.5.6",
     "angular-gridster2": "^11.0.0",
     "material": "^0.4.3",
     "rxjs": "~6.4.0",
