--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-cli-ghpages": "^0.6.2",
     "angular-draggable-droppable": "^4.5.6",
     "angular-gridster2": "^11.0.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "material": "^0.4.3",
+    "mongoose": "^5.11.7",
     "rxjs": "~6.4.0",
+    "socket.io-client": "^3.0.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
