--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "angular-draggable-droppable": "^4.5.6",
     "angular-gridster2": "^11.0.0",
     "body-parser": "^1.19.0",
+    "buffer": "^6.0.3",
     "express": "^4.17.1",
     "material": "^0.4.3",
     "mongoose": "^5.11.7",
     "rxjs": "~6.4.0",
     "socket.io-client": "^3.0.4",
+    "socketio-file-upload": "^0.7.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
