--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.4",
+    "@angular/animations": "~8.2.14",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
@@ -21,17 +21,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "angular-cli-ghpages": "^0.6.2",
-    "angular-draggable-droppable": "^4.5.6",
-    "angular-gridster2": "^11.0.0",
-    "body-parser": "^1.19.0",
-    "buffer": "^6.0.3",
-    "express": "^4.17.1",
-    "material": "^0.4.3",
-    "mongoose": "^5.11.7",
+    "angular-gridster2": "^11.0.1",
     "rxjs": "~6.4.0",
-    "socket.io-client": "^3.0.4",
-    "socketio-file-upload": "^0.7.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
