--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "angular-gridster2": "^11.0.1",
     "rxjs": "~6.4.0",
+    "socket.io-client": "^3.0.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
